# golang/domain/repository/review.go
@@ -10,6 +10,7 @@ type Review interface {
 	FindByReviewID(ctx *gin.Context, reviewID int64) (ro *object.Review, err error)
 	GetLatestReviewByUserID(c *gin.Context, userID int64, num int64) (ros []*object.Review, err error)
 	GetBookmarkReviewByUserID(c *gin.Context, userID int64, num int64) (ros []*object.Review, err error)
+	GetEvaluateReviewByUserID(c *gin.Context, userID int64, upper int64, lower int64) (ros []*object.Review, err error)
 	GetUnvisitedReviews() (ROs []*object.Review)
 	AddReviewAndShop(c *gin.Context, shopID string, userID int64, shopname string, req *object.CreateReviewRequest) (ro *object.Review, err error)
 	FindReviewsByShopID(c *gin.Context, userID int64, shopID string) (ros []*object.Review, err error)
