# openapi.yml
@@ -421,6 +421,39 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Relationship" # ToDo: 返すべきrefを定義
+  "/home/review/evaluate":
+    get:
+      security:
+        - Auth: []
+      tags:
+        - home
+      summary: (not implemented yet) Getting bookmark reviews filtered by Evaluate (need discussion)
+      description: ""
+      parameters:
+        - name: lower
+          in: query
+          description: lower
+          example: "1"
+          required: true
+          schema:
+            type: string
+        - name: upper
+          in: query
+          description: upper
+          example: "3"
+          required: true
+          schema:
+            type: string
+      # operationId: findRelationships
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Relationship" # ToDo: 返すべきrefを定義
   "/img/{filename}":
     get:
       tags:
